updated social media links

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <a href="https://github.com/DavidHenry-Dev"><i class="fa-brands fa-github grow"></i></a>
         </li>
         <li>
-            <a href=""><i class="fa-brands fa-linkedin grow"></i></a>
+            <a href="https://www.linkedin.com/in/davidhenrydev/"><i class="fa-brands fa-linkedin grow"></i></a>
         </li>
         <li>
-            <a href=""><i class="fa-brands fa-twitter grow"></i></a>
+            <a href="https://twitter.com/ItsWaveyDavid"><i class="fa-brands fa-twitter grow"></i></a>
         </li>
         </ul>
        </div> 
