--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
             </div>
       <div>
         <h2>About Me</h2>
-        <p>Hello, I'm David and I'm a friendly and intuitive Software Engineer based in sunny West Palm Beach, FL. I provide my skills, knowledge, and creativity to help drive small businesses to the next level and bring them the online presence they deserve. of small businesses to the internetI use With a strong knack for technology, research, and. Whether it's in my professional or personal life, I'm at my absolute best when researching, creating and implementing creative solutions to the challenges I face. </p>
+        <p>Hello, I'm David. A friendly and intuitive Software Engineer based in sunny West Palm Beach, FL. I help businesses reach their potential by bulding/and or revamping their websites, bringing them the online presence they deserve with my skills, knowledge, and creativity in all things web development. </p> 
+        <p> Whether it's in my professional or personal life, I'm at my absolute best when researching, creating and implementing creative solutions to the challenges I face. </p>
       </div>
      
 </div>
-    </section>5
+    </section>
     
     <!-------- Recent Projects ------------->
     <section class="myProjects" id="work">
