--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
       <nav>
-        <a href="https://davidhenry.dev" id="myLogo">DH</a>
+        <a href="https://davidhenry.dev"><img src="/dhlogo1.png" id="myLogo" alt=""></a>
         <ul class ="displayDesktop">
             <li class="link"><a href="#about">About</a></li>
             <li class="link"><a href="#skills">Skills</a></li>
