content updates and minor fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <nav class="container">
-      <img src="https://res.cloudinary.com/davidhenrydev/image/upload/c_scale,w_60/v1663717584/myPortfolio/dhlogo3_hdtert.png" id="myLogo" alt="davidHenryLogo">
+      <a href="https://davidhenry.dev/"><img src="https://res.cloudinary.com/davidhenrydev/image/upload/c_scale,w_60/v1663717584/myPortfolio/dhlogo3_hdtert.png" id="myLogo" alt="davidHenryLogo"></a>
       <div class="nav-toggle">
         <!-- <i class="fa-solid fa-bars fa-2xl"></i> -->
         <span class="bar"></span>
@@ -104,15 +104,15 @@
       <div class="servicesGrid">
         <div class="div1">
           <h3><i class="fa-solid fa-laptop-code"></i>Web Development</h3>
-          <p>I develop full-stack websites using HTML5/CSS3, JavaScript, and the MERN stack. Reach more customers and get more business by establishing/enhancing your presence on the web. In today's modern world, a website is your customer's first point of contact with you and is the most essential.</p>
+          <p>I develop full-stack websites using HTML5/CSS3, JavaScript, and the MERN stack. I'll help you reach more customers and get more business by establishing/enhancing your presence online. A website is your customer's first point of contact with you and is the most essential.</p>
         </div>
         <div class="div2">
           <h3> <i class="fa-solid fa-layer-group"></i>SEO</h3>
-          <p>I develop fully responsive</p>
+          <p>Let me help your site get the attention it deserves. I make sure your site is optimized to be seen and used by more customers when they look for your business.</p>
         </div>
         <div class="div3">
           <h3><i class="fa-solid fa-screwdriver-wrench"></i>UI/UX</h3>
-          <p>I create full-service, responsive web development and design that ensures your site will not only look great, but also be efficent and usable across a wide variety of devices.</p>
+          <p>I build full-service, responsive web development and design that ensures your site will not only look great, but also be efficent and usable across a wide variety of devices.</p>
         </div>
         <div class="div4">
           <h3><i class="fa-solid fa-screwdriver-wrench"></i>Services</h3>
@@ -129,7 +129,7 @@
       <h2>Work <span>/</span> Projects</h2>
       <div class="projectInfo from-right slide-in">
         <img src="https://res.cloudinary.com/davidhenrydev/image/upload/v1665573920/myPortfolio/formFriendPortfolio_lhtp3f.png" alt="">
-        <div>
+        <div class ='description'>
           <h3>Form-Friend</h3>
           <ul>
             <li>
@@ -155,7 +155,7 @@
       </div>
       <div class="projectInfo from-left slide-in fade-in">
         <img src="https://res.cloudinary.com/djlowrayn/image/upload/v1647194930/myPortfolio/placeholder4_oroxak.png" alt="">
-        <div>
+        <div class ='description'>
           <h3>Project 2</h3>
           <ul>
             <li><i class="fa-brands fa-html5"></i></li>
@@ -169,7 +169,7 @@
       </div>
       <div class="projectInfo from-right slide-in fade-in">
         <img src="https://res.cloudinary.com/djlowrayn/image/upload/v1647194930/myPortfolio/placeholder4_oroxak.png" alt="">
-        <div>
+        <div class ='description'>
           <h3>Project 3</h3>
           <ul>
             <li><i class="fa-brands fa-html5"></i></li>
