--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="servicesGrid">
         <div class="div1">
           <h3><i class="fa-solid fa-laptop-code"></i>Web Development</h3>
-          <p>I develop full-stack websites using HTML5/CSS3, JavaScript, and the MERN stack. I'll help you reach more customers and get more business by establishing/enhancing your presence online. A website is your customer's first point of contact with you and is the most essential.</p>
+          <p>I develop full-stack websites using HTML5/CSS3, JavaScript, and the MERN stack. Reach more customers and get more business by establishing/enhancing your presence online. A website is your customer's first point of contact with you and is the most essential.</p>
         </div>
         <div class="div2">
           <h3> <i class="fa-solid fa-layer-group"></i>SEO</h3>
@@ -150,7 +150,7 @@
             </li>
           </ul>
           <p>A full-stack app that allows users to upload videos of their weightlifting exercises and receive feedback on their form via rated comments by others.</p>
-          <a href="https://github.com/DavidHenry-Dev/FormFriend"></a><button class="viewCodeBtn">Github</button>
+          <a href="https://github.com/DavidHenry-Dev/FormFriend"></a><button class="viewCodeBtn" id="styleBtn">Github</button>
         </div>
       </div>
       <div class="projectInfo from-left slide-in fade-in">
@@ -164,7 +164,7 @@
           </ul>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem, adipisci odio repudiandae repellat eveniet, velit consequuntur facilis illum nemo eos perferendis debitis vel fugiat aspernatur voluptas consectetur minima? Tenetur, odio.
           </p>
-          <button class="viewCodeBtn">View Code</button>
+          <button class="viewCodeBtn" id="styleBtn">View Code</button>
         </div>
       </div>
       <div class="projectInfo from-right slide-in fade-in">
@@ -177,7 +177,7 @@
             <li><i class="fa-brands fa-js"></i></li>
           </ul>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem, adipisci odio repudiandae repellat eveniet, velit consequuntur facilis illum nemo eos perferendis debitis vel fugiat aspernatur voluptas consectetur minima? Tenetur, odio.</p>
-          <button class="viewCodeBtn">View Code</button>
+          <button class="viewCodeBtn" id="styleBtn">View Code</button>
         </div>
       </div>
   </section>
@@ -193,7 +193,7 @@
         <input type="email" name="replyTo" placeholder="Email">
         <textarea name="message" placeholder="Message" cols="30" rows="10"></textarea>
         <div id="submitInfo">
-          <button type="submit">Submit</button>
+          <button type="submit" id="styleBtn">Submit</button>
         </div>
       </form>
     </div>
