Added a currentl finished project, button links fixed

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="container">
       <h2>Work <span>/</span> Projects</h2>
       <div class="projectInfo from-right slide-in">
-        <img src="https://res.cloudinary.com/davidhenrydev/image/upload/v1665573920/myPortfolio/formFriendPortfolio_lhtp3f.png" alt="">
+        <img src="https://res.cloudinary.com/davidhenrydev/image/upload/v1670349229/FormFriend/Formfriend_ypa9o1.png" alt="">
         <div class ='description'>
           <h3>Form-Friend</h3>
           <ul>
@@ -150,21 +150,21 @@
             </li>
           </ul>
           <p>A full-stack app that allows users to upload videos of their weightlifting exercises and receive feedback on their form via rated comments by others.</p>
-          <a href="https://github.com/DavidHenry-Dev/FormFriend"></a><button class="viewCodeBtn" id="styleBtn">Github</button>
+          <button class="viewCodeBtn" id="styleBtn"><a href="https://github.com/DavidHenry-Dev/FormFriend">View Code</a></button>
         </div>
       </div>
       <div class="projectInfo from-left slide-in fade-in">
-        <img src="https://res.cloudinary.com/djlowrayn/image/upload/v1647194930/myPortfolio/placeholder4_oroxak.png" alt="">
+        <img src="https://res.cloudinary.com/davidhenrydev/image/upload/v1671555027/Github%20Project%20Snapshots/ITsnapshot_t4upad.png" alt="">
         <div class ='description'>
-          <h3>Project 2</h3>
+          <h3>IT Specialist Site</h3>
           <ul>
             <li><i class="fa-brands fa-html5"></i></li>
             <li><i class="fa-brands fa-css3-alt"></i></li>
             <li><i class="fa-brands fa-js"></i></li>
           </ul>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem, adipisci odio repudiandae repellat eveniet, velit consequuntur facilis illum nemo eos perferendis debitis vel fugiat aspernatur voluptas consectetur minima? Tenetur, odio.
+          <p>A super fast, responsive personal site created for a client to broaden his reach, sell his services, and gain new customers. Built using the good ol' stand-bys.
           </p>
-          <button class="viewCodeBtn" id="styleBtn">View Code</button>
+          <button class="viewCodeBtn" id="styleBtn"><a href='https://stewartsitetestdomain.netlify.app/'>Live Demo</a></button>
         </div>
       </div>
       <div class="projectInfo from-right slide-in fade-in">
