updated projects, fixed broken links

--- a/index.html
+++ b/index.html
@@ -164,19 +164,19 @@
           </ul>
           <p>A super fast, responsive personal site created for a client to broaden his reach, sell his services, and gain new customers. Built using the good ol' stand-bys.
           </p>
-          <button class="viewCodeBtn" id="styleBtn"><a href='https://stewartsitetestdomain.netlify.app/'>Live Demo</a></button>
+          <button class="viewCodeBtn" id="styleBtn"><a href='https://itclientdemo.netlify.app/'>Live Demo</a></button>
         </div>
       </div>
       <div class="projectInfo from-right slide-in fade-in">
-        <img src="https://res.cloudinary.com/djlowrayn/image/upload/v1647194930/myPortfolio/placeholder4_oroxak.png" alt="">
+        <img src="https://res.cloudinary.com/davidhenrydev/image/upload/v1653234258/pomodoroApp_hll6pc.png" alt="">
         <div class ='description'>
-          <h3>Project 3</h3>
+          <h3>Pomodoro Timer</h3>
           <ul>
             <li><i class="fa-brands fa-html5"></i></li>
             <li><i class="fa-brands fa-css3-alt"></i></li>
             <li><i class="fa-brands fa-js"></i></li>
           </ul>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem, adipisci odio repudiandae repellat eveniet, velit consequuntur facilis illum nemo eos perferendis debitis vel fugiat aspernatur voluptas consectetur minima? Tenetur, odio.</p>
+          <p>A pomodoro timer created with vanilla JS, Html, and css.</p>
           <button class="viewCodeBtn" id="styleBtn">View Code</button>
         </div>
       </div>
