--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <nav class="container">
-      <a href="https://davidhenry.dev/"><img src="https://res.cloudinary.com/davidhenrydev/image/upload/c_scale,w_60/v1663717584/myPortfolio/dhlogo3_hdtert.png" id="myLogo" alt="davidHenryLogo"></a>
+      <a href="https://davidhenry.dev/"><img src="https://res.cloudinary.com/davidhenrydev/image/upload/v1672944423/myPortfolio/default-cropped_gwzaqd.svg" id="myLogo" alt="davidHenryLogo"></a>
       <div class="nav-toggle">
         <!-- <i class="fa-solid fa-bars fa-2xl"></i> -->
         <span class="bar"></span>
